# xaprc

./: README.md
.circleci/: config.yml
captived/: .clang-format  .gitignore  CMakeLists.txt  LICENSE  captive-server-libevent.cpp  captive-server-libevent.h  defines.h  format.sh  http_server.cpp  http_server.h  http_server.inl  main.cpp  main.h  resource.cpp  resource.h  rest_get_file.cpp  rest_get_file.h  rest_mode_get_put.cpp  rest_mode_get_put.h  rest_put_file.cpp  rest_put_file.h  rest_reboot.cpp  rest_reboot.h  rest_resource_generic.cpp  rest_resource_generic.h  rest_resource_replace_file.cpp  rest_resource_replace_file.h  rest_resource_root.cpp  rest_resource_root.h  rest_resource_router_mode.cpp  rest_resource_router_mode.h  rest_resource_to_file.cpp  rest_resource_to_file.h  rest_wifi_config.cpp  rest_wifi_config.h
captived/.docker/: Dockerfile
captived/cmake/: Findlibevent.cmake
captived/config/: wlan_config.json  wpa_supplicant-nl80211-wlan0.conf
captived/config/enf1/: address
captived/http_server/: CMakeLists.txt
captived/integration-tests/: CMakeLists.txt  firmware_Test.py  mode_Test.py  mode_Test_passthrough.py  reboot_Test.py  rest_get_Test.py  rest_mode_Test.py  root_level_status_Test.py  secure_lan_symlink_Test.py  simple_get_Test.py  uptime_Test.py  wifi_Test.py  wifi_config_Test.py  wifi_status_Test.py
captived/integration-tests/config/default/: mac_address
captived/integration-tests/config/default/data/: default_target
captived/integration-tests/config/default/data/connman/passthrough/: wifi.config
captived/integration-tests/config/default/data/connman/secure-lan/: wifi.config
captived/integration-tests/config/default/data/enftun/enf0/: address
captived/integration-tests/config/default/data/systemd/: xbridgex.target.active
captived/integration-tests/config/default/data/systemd/system/: default.target
captived/integration-tests/config/default/etc/mender/: artifact_info  test-model
captived/integration-tests/config/default/etc/mender/dev-test/: artifact_info  model
captived/integration-tests/config/default/etc/mender/prod-test/: artifact_info  model
captived/integration-tests/config/default/etc/systemd/system/: passthrough.target
captived/integration-tests/config/default/lib/systemd/system/: passthrough.target  secure-host.target  secure-lan.target
captived/integration-tests/config/default/proc/: uptime
captived/integration-tests/config/default/rom/: serial
captived/integration-tests/config/default/rom/mac_address/: 2  3  4
captived/integration-tests/config/default/sbin/: fw_env_bootcount  fw_env_upgrade_available  fw_printenv  iw  reboot  reset-fw  wlan0.connected
captived/integration-tests/config/passthrough/data/systemd/: xbridgex.target.active
captived/integration-tests/config/passthrough/data/systemd/system/: default.target
captived/integration-tests/config/passthrough/etc/systemd/system/: secure-host.target
captived/integration-tests/xaptum/: embedded_server.py  test.py
captived/rest/: CMakeLists.txt
captived/rest/include/: put_file.h  reboot.h
captived/rest/src/: mode_get_put.cpp  put_file.cpp  wifi_config.cpp
captived/src/: defines.hpp  firmware_manager.cpp  firmware_manager.hpp  json.hpp  main.cpp  main.hpp  picosha2.hpp  system.hpp  tasks.hpp
captived/src/http/: http_server.cpp  http_server.h  http_server.hpp  http_server.inl  server.cpp  server.hpp  server.inl  status.hpp
captived/src/rest/: aggregate_resource.cpp  aggregate_resource.hpp  firmware.cpp  firmware.hpp  firmware_commit.cpp  firmware_commit.hpp  firmware_image.cpp  firmware_image.hpp  firmware_update_state.cpp  firmware_update_state.hpp  firmware_uri.cpp  firmware_uri.hpp  firmware_version.cpp  firmware_version.hpp  get_file.cpp  get_file.h  get_file.hpp  line_resource.cpp  line_resource.hpp  mode.cpp  mode.hpp  mode_get_put.cpp  mode_get_put.h  mode_get_put.hpp  model.cpp  model.hpp  put_file.cpp  put_file.h  put_file.hpp  reboot.cpp  reboot.h  reboot.hpp  resource.h  resource.hpp  root.cpp  root.hpp  root_resource.cpp  root_resource.h  root_resource.hpp  uptime.cpp  (+10 more)
captived/systemd/: CMakeLists.txt  captived.service
enftun-cmd/: CMakeLists.txt  enf1.conf
enftun-data/: CMakeLists.txt  enf0.conf  enftun-data@.service.in
enftun-data/cmake-modules/: InstallSymlink.cmake
etc-hosts/: CMakeLists.txt  README.md  hosts.in
gadget-config/: CMakeLists.txt  configure-gadget.sh  xaprc.scheme.j2
gadget-config/schemes/function/: acm.gs  ecm.gs
gadget-config/schemes/gadget/: xaprc.gs
gadget-config/src/: main.c
kernel/: .gitignore  Kbuild  Kconfig  Makefile  README.md
macset/: CMakeLists.txt  README.md  macset
macset/systemd/: CMakeLists.txt  macset@.service
macset/wlan0/: CMakeLists.txt  wlan0.conf
mender-certs/: CMakeLists.txt  README.md
mender-certs/dev/: xaptum-mender.signer.pub.pem
mender-certs/prod/: Xaptum-Mender.crt  xaptum-mender.signer.pub.pem
mender-identity/: CMakeLists.txt  README.md  mender-device-identity
tcp-proxy/: CMakeLists.txt  Makefile  psock_test.c
wpa-credentials/: CMakeLists.txt  README.md  conf.in  main.conf  passthrough-recovery.config  passthrough-wifi.config.in  secure-host-recovery.config  secure-host-wifi.config.in
xap-usb-gadget/: CMakeLists.txt  xap-usb-gadget.c
xap-usb-gadget/systemd/: CMakeLists.txt  xap-usb-gadget.service.in
xbridge/: CMakeLists.txt  README.md
xbridge/cmake/: FindPCAP.cmake
xbridge/src/: xbridge-setup.in  xbridge.c
xbridge/systemd/: CMakeLists.txt  xbridge-setup.service.in  xbridge.service.in  xbridges-setup.service.in  xbridges.service.in
